--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -17,5 +17,6 @@
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off"
+        // "@typescript-eslint/no-explicit-any": "off"
     }
 }
