--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -1,8 +1,16 @@
 {
-    "plugins": ["prettier", "import"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "prettier",
+        "import",
+        "@typescript-eslint"
+    ],
     "extends": [
         "plugin:prettier/recommended",
-        "prettier"
+        "prettier",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 2020,
@@ -17,6 +25,6 @@
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off",
-        "@typescript-eslint/no-explicit-any": "on"
+        "@typescript-eslint/no-explicit-any": "error"
     }
 }
