--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "nouislider": "^15.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
   }
