feat: add pagination and random cars at garage view

--- a/async-race/package.json
+++ b/async-race/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "christmas-task",
+  "name": "async-race",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.base.config.js",
